Make sure list item elements don't wrap when using ellipsis modifer
resolves #7

--- a/sass/bulma-list.sass
+++ b/sass/bulma-list.sass
@@ -46,7 +46,8 @@ $list-item-title-weight: $weight-semibold !default
   &:not(:last-child):not(.box)
     border-bottom: 1px solid $list-item-divider-color
   +mobile
-    flex-wrap: wrap
+    .list:not(.has-overflow-ellipsis) &
+      flex-wrap: wrap
 
 .list-item-image
   flex-shrink: 0
